--- a/src/assets/style/all.scss
+++ b/src/assets/style/all.scss
@@ -1,3 +1,5 @@
 @import './components/header';
-@import './components/mainToDay';
+@import './components/main';
+@import './components/mainContent';
+@import './components/mainWeek';
 @import './fonts.scss';
