--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -5,7 +5,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: 'Montserrat';
-	user-select: none;
+	// user-select: none;
 }
 
 a{
@@ -21,4 +21,7 @@ ul{
 	width: 100%;
 	padding: 0 15px;
 	margin: 0 auto;
+}
+
+body{
 }
