--- a/src/assets/style/components/_mainWeek.scss
+++ b/src/assets/style/components/_mainWeek.scss
@@ -32,13 +32,14 @@
   }
 
   &-cards {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    gap: 20px;
     margin-top: 7px;
     border-radius: 0px 0px 20px 20px;
     background: #fff;
     padding: 20px;
     box-shadow: 2px 5px 25px -3px rgba(180, 180, 180, 0.25);
-    justify-content: space-between;
   }
 
   &-card {
