--- a/src/assets/style/components/_header.scss
+++ b/src/assets/style/components/_header.scss
@@ -36,6 +36,11 @@
 			border: none;
 			outline: none;
 			text-align: center;
+      color: #fff;
+      
+      &::placeholder{
+        color: #fff;
+      }
     }
   } // header__search
 }
