--- a/src/assets/style/components/_mainWeek.scss
+++ b/src/assets/style/components/_mainWeek.scss
@@ -37,9 +37,9 @@
     gap: 20px;
     margin-top: 7px;
     border-radius: 0px 0px 20px 20px;
-    background: #fff;
+    background: #111;
     padding: 20px;
-    box-shadow: 2px 5px 25px -3px rgba(180, 180, 180, 0.25);
+    box-shadow: 2px 5px 25px -3px rgba(255, 255, 255, 0.6);
   }
 
   &-card {
@@ -50,7 +50,7 @@
     padding: 11px;
 
     &-dayname {
-      color: #000;
+      color: #fff;
       font-size: 18px;
       font-weight: 500;
       line-height: normal;
@@ -72,7 +72,7 @@
 
     &-temp {
       margin-top: 13px;
-      color: #000;
+      color: #fff;
       font-size: 18px;
       font-weight: 500;
       line-height: normal;
